# campus

./: README.md
2024-fall/: README.md
2024-fall/KAIST_21percent/: .gitignore  README.md  index.html  package-lock.json  package.json  pull_request_template.md  vite.config.js
2024-fall/KAIST_21percent/.husky/: pre-commit
2024-fall/KAIST_21percent/backend/: ReadMe.md  firbaseReference.js  firebaseReference.js  index.js  package.json
2024-fall/KAIST_21percent/src/: main.jsx
2024-fall/KAIST_FitFor/: .gitmodules
2024-fall/KAIST_TenTen/: .gitignore  README.md  package-lock.json  package.json  scheduler.js  tailwind.config.js
2024-fall/KAIST_TenTen/app/: ConsultationRecordPage.module.css  ConsultationRecordPage.tsx  MainPage.module.css  MainPage.tsx  layout.tsx  not-found.tsx  page.tsx
2024-fall/KAIST_TenTen/components/: DeleteModal.module.css  DeleteModal.tsx  SortOptions.module.css  SortOptions.tsx  navigation.tsx
2024-fall/KAIST_TenTen/src/: input.css
2024-fall/KAIST_Yakgook/: README.md  package-lock.json  package.json
2024-fall/KAIST_Yakgook/AI/: Dockerfile  README.md  preprocessing.py  requirements.txt  retrieve_and_rerank_api.py  test_api.py
2024-fall/KAIST_Yakgook/Unity/: .gitignore
2024-fall/KAIST_Yakgook/backEnd/: .env  .gitignore  README.md  app.js  docker-compose.yml  package-lock.json  (+2 more)
2024-fall/KAIST_disaster.io/: .gitignore  LICENSE  README.md  docker-compose.yml  nginx.conf
2024-fall/KAIST_disaster.io/fast/: Dockerfile  pyproject.toml
2024-fall/KAIST_disaster.io/fast/fast/: __init__.py  env.py  host.py  main.py  models.py  player.py
(+241 files in other folders)
