[tool.poetry]
name = "fast"
version = "0.1.0"
description = ""
authors = ["Jeongbin Kim <147483248+ijake-16@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.112.2" }
pandas = "^2.2.2"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.31" }
asyncpg = "^0.29.0"
alembic = "^1.13.2"
fastapi-login = "^1.10.1"
fastapi-sso = "^0.15.0"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pylint = "^3.2.6"
mypy = "^1.11.2"

[tool.pyright]
venvPath = "/Users/jaeyong/Library/Caches/pypoetry/virtualenvs"
venv = "fast-mZJ67nOY-py3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
